--- a/GscInstallation/DeleteSite/deleteSite1.html
+++ b/GscInstallation/DeleteSite/deleteSite1.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" async="" id="zeacon-sdk"
         src="https://gandalfsgarage.com/sdk/correlator.js?api-key=03c66432-a324-4bdc-be5b-138f7e0b4991"></script>
     <!-- End of Zeacon Code -->
+    <meta name="google-site-verification" content="VeyspfulNQqYCssNq_lBnuh-UGp_5aqZZcfcp3nlyGU" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -46,16 +47,16 @@
     <header>
         <h1>Welcome to My Simple HTML Page</h1>
     </header>
+    <div style="padding:56.25% 0 0 0;position:relative">
+        <div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe
+                src="https://gandalfsgarage.com/embed/2eff1bcf262" title="Zeacon | Embed Video" width="100%"
+                height="100%" allowfullscreen="" style="border:0px"></iframe>
+            <script id="zeacon-sdk-correlation-manager" type="text/javascript"
+                src="https://gandalfsgarage.com/sdk/correlation-manager/bundle.js"></script>
+        </div>
+    </div>
 
     <main>
-        <div style="padding:56.25% 0 0 0;position:relative">
-            <div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe
-                    src="https://gandalfsgarage.com/embed/2eff1bcf262" title="Zeacon | Embed Video" width="100%"
-                    height="100%" allowfullscreen="" style="border:0px"></iframe>
-                <script id="zeacon-sdk-correlation-manager" type="text/javascript"
-                    src="https://gandalfsgarage.com/sdk/correlation-manager/bundle.js"></script>
-            </div>
-        </div>
         <h2>About This Page</h2>
         <p>This is a testing page for an embedded video. You can use this page to check how embedded videos are
             displayed and behave within an HTML document.</p>
