--- a/GscInstallation/VerifySite/verifySite.html
+++ b/GscInstallation/VerifySite/verifySite.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" async="" id="zeacon-sdk"
         src="https://gandalfsgarage.com/sdk/correlator.js?api-key=03c66432-a324-4bdc-be5b-138f7e0b4991"></script>
     <!-- End of Zeacon Code -->
+    <meta name="google-site-verification" content="VeyspfulNQqYCssNq_lBnuh-UGp_5aqZZcfcp3nlyGU" />
 </head>
 
 <body>
